[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/IceCaveSmall.png" type="Texture" id=4]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="SpiderBox" type="Control" parent="."]
margin_left = 44.0
margin_top = 575.0
margin_right = 87.0
margin_bottom = 599.0
rect_scale = Vector2( 4, 4 )

[node name="Player" parent="SpiderBox" instance=ExtResource( 2 )]
z_index = 1

[node name="Layout" type="Control" parent="."]
margin_top = 124.0
margin_right = 501.0
margin_bottom = 495.0

[node name="RichTextLabel" type="RichTextLabel" parent="Layout"]
margin_left = 136.0
margin_top = 63.0
margin_right = 214.0
margin_bottom = 96.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
text = "  Arachnid
Robophobia"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Layout"]
margin_left = 66.0
margin_top = 189.0
margin_right = 256.0
margin_bottom = 208.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
text = "Tap SPACE to control spider"
scroll_active = false

[node name="Button" type="Button" parent="Layout"]
margin_left = 132.0
margin_top = 254.0
margin_right = 188.0
margin_bottom = 274.0
rect_scale = Vector2( 4, 4 )
text = "START"

[node name="Controller" parent="." instance=ExtResource( 3 )]

[node name="IceCaveSmall" type="Sprite" parent="."]
position = Vector2( 250, 370 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 4 )

[connection signal="pressed" from="Layout/Button" to="." method="_on_Button_pressed"]
[connection signal="hold_ended" from="Controller" to="." method="_on_Controller_hold_ended"]
[connection signal="hold_started" from="Controller" to="." method="_on_Controller_hold_started"]
[connection signal="tapped" from="Controller" to="." method="_on_Controller_tapped"]
